@@ -7,7 +7,6 @@ plugins {
 }
 
 apply from: 'project-properties.gradle'
-//apply from: "$scriptsUrl/build-docker.gradle"
 apply from: "$scriptsUrl/build-info.gradle"
 apply from: "$scriptsUrl/build-commons.gradle"
 //apply from: "$scriptsUrl/build-quality.gradle"
@@ -31,7 +30,7 @@ dependencies {
     implementation 'com.google.guava:guava:33.3.0-jre'
     api 'org.apache.httpcomponents:httpclient:4.5.14'
     api 'com.fasterxml.woodstox:woodstox-core:6.5.1'
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
+    api('org.springframework.boot:spring-boot-starter-data-jpa') {
         exclude group: 'org.hibernate', module: 'hibernate-core'
     }
     implementation 'org.postgresql:postgresql:42.7.3'
@@ -136,7 +135,6 @@ jar.enabled(true)
 jar.archiveClassifier.set('')
 
 test {
-    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED' // TODO: remove in Spring Boot 3
     useJUnitPlatform()
     testLogging {
         events = ["failed"]
